--- a/gradle.properties
+++ b/gradle.properties
@@ -21,5 +21,5 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 RELEASE_STORE_PASSWORD=198719
-RELEASE_KEY_ALIAS=myKey
+RELEASE_KEY_ALIAS=andrdoi_key
 RELEASE_KEY_PASSWORD=198719
